WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235110
WPT css/css-animations/flip-running-animation-via-variable.html is a failure
https://bugs.webkit.org/show_bug.cgi?id=235110
Summary
WPT css/css-animations/flip-running-animation-via-variable.html is a failure
Antoine Quint
Reported
2022-01-12 05:31:13 PST
This is a new test and it's a failure.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-01-19 05:33:39 PST
<
rdar://problem/87766485
>
Antoine Quint
Comment 2
2023-02-16 08:47:58 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10204
EWS
Comment 3
2023-02-16 14:41:15 PST
Committed
260399@main
(4d4f1f6673fb): <
https://commits.webkit.org/260399@main
> Reviewed commits have been landed. Closing PR #10204 and removing active labels.
Antoine Quint
Comment 4
2023-02-17 02:07:20 PST
***
Bug 235146
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug