WPT css/css-animations/flip-running-animation-via-variable.html is a failure https://bugs.webkit.org/show_bug.cgi?id=235110 rdar://87766485

Reviewed by Dean Jackson.

This test updates a @keyframes rules while an accelerated animation is in flight.
While we had all the necessary logic to recompute computed keyframes styles in this
situation, and we had logic to update timing and keyframe properties for an accelerated
animation in flight, we did not have logic to tie a change in computed keyframes on
an accelerated animation in flight.

So we factor the logic related to accelerated animations out of animationDidChangeTimingProperties()
into a new updateAcceleratedAnimationIfNecessary() method which we also call from
setBlendingKeyframes(). We also rename the accelerated action used in this context
from UpdateTiming to UpdateProperties since it's not timing-specific anymore.

* LayoutTests/TestExpectations:
* Source/WebCore/animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::setBlendingKeyframes):
(WebCore::KeyframeEffect::addPendingAcceleratedAction):
(WebCore::KeyframeEffect::animationDidChangeTimingProperties):
(WebCore::KeyframeEffect::updateAcceleratedAnimationIfNecessary):
(WebCore::KeyframeEffect::applyPendingAcceleratedActions):
* Source/WebCore/animation/KeyframeEffect.h:

Canonical link: https://commits.webkit.org/260399@main